# nemsas-backend

./: .env.example  .gitignore  Dockerfile  README.md  TASK_PROGRESS.md  deploy.sh  docker-compose.yml  main.py  nginx.conf  pyproject.toml  requirements.txt  seed_log.txt
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 1ae57cb116f7_add_ambulance_dispatch_fields.py  201257c7c789_add_missing_columns_to_users_table.py  20cb63730b55_make_location_fields_nullable_for_ussd_.py  302d96555d23_add_auth_models_and_rate_limiting.py  3_create_core_tables.py  6ff702b09d19_add_destination_facility_id_to_incident.py  790c4f720efe_initial_migration.py  8d2c6b3e7f4a_add_missing_population_column.py  (+3 more)
app/: main.py
migrations/: env.py
scratch/: verify_ussd_sms.py
scripts/: ambulance_claims.json  ambulance_types.json  ambulances.json  check_counts.py  check_db.py  check_ids.py  check_specific_ids.py  check_users.py  claims.json  claims_images.json  create_medical_interventions_table.py  create_patients_table.py  demo_data.py  details.json  duplicate_users.json  etc_claims.json  etc_interventions.json  fee_categories.json  fetch_live_payloads.py  find_duplicates.py  find_missing_incident.py  frontend.js  hospital_types.json  hospitals.json  incident.json  incident_type.json  lgas.json  medicalIntervention.json  monitoring.json  patients.json  roles.json  runsheet.json  seed.py  seed_all.py  seed_ambulance_types.py  seed_ambulances.py  seed_claims.py  seed_claims_images.py  seed_fee_categories.py  seed_hospital_types.py  (+23 more)
src/: main.py
tests/: conftest.py
(+229 files in other folders)
